# rust-proguard

./: .craft.yml  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: check-retrace-spec.yml  ci.yml  enforce-license-compliance.yml  release.yml  weekly.yml
benches/: proguard_mapping.rs  proguard_parsing.rs
scripts/: check-retrace-spec.sh
src/: builder.rs  cache.rs  java.rs  lib.rs  mapper.rs  mapping.rs  parser.rs  stacktrace.rs  utils.rs
src/cache/: debug.rs  in_memory.rs  mod.rs  raw.rs
tests/: basic.rs  callback.rs  r8-ambiguous.NOTES.md  r8-ambiguous.rs  r8-exception-handling.NOTES.md  r8-exception-handling.rs  r8-inline.rs  r8-line-number-handling.NOTES.md  r8-line-number-handling.rs  r8-method-overloading.NOTES.md  r8-method-overloading.rs  r8-source-file-edge-cases.NOTES.md  r8-source-file-edge-cases.rs  r8-special-formats.NOTES.md  r8-special-formats.rs  r8-synthetic.NOTES.md  r8-synthetic.rs  r8.rs  retrace.rs
tests/res/: mapping-callback-extra-class_EditActivity.kt  mapping-callback-extra-class_TestSourceContext.kt  mapping-callback-inner-class_EditActivity.kt  mapping-callback_EditActivity.kt  mapping-inline-no-base.txt  mapping-outline-complex.txt  mapping-outline.txt  mapping-r8-symbolicated_file_names.txt  mapping-r8.txt  mapping-rewrite-complex.txt  mapping-zero-line-info.txt
