[package]
name = "proguard"
version = "4.0.0"
authors = ["Sentry <oss@sentry.io>"]
keywords = ["proguard", "retrace"]
description = "Basic proguard mapping file handling for Rust"
repository = "https://github.com/getsentry/sentry-rust"
homepage = "https://sentry.io/welcome/"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"

[features]
uuid = ["uuid_", "lazy_static"]

[dependencies]
uuid_ = { package = "uuid", version = "0.8.1", features = ["v5"], optional = true }
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
