[package]
name = "proguard"
version = "5.4.1"
authors = ["Sentry <oss@sentry.io>"]
keywords = ["proguard", "retrace", "android", "r8"]
description = "Basic proguard mapping file handling for Rust"
repository = "https://github.com/getsentry/rust-proguard"
homepage = "https://sentry.io/welcome/"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"

[features]
uuid = ["uuid_", "lazy_static"]

[dependencies]
uuid_ = { package = "uuid", version = "1.0.0", features = ["v5"], optional = true }
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
criterion = "0.4"

[[bench]]
name = "proguard_parsing"
harness = false
