[package]
name = "proguard"
version = "5.6.2"
authors = ["Sentry <oss@sentry.io>"]
keywords = ["proguard", "retrace", "android", "r8"]
description = "Basic proguard mapping file handling for Rust"
repository = "https://github.com/getsentry/rust-proguard"
homepage = "https://sentry.io/welcome/"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2021"

[features]
uuid = ["dep:uuid"]

[lints.clippy]
unwrap-used = "warn"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.61"
uuid = { version = "1.0.0", features = ["v5"], optional = true }
watto = { version = "0.1.0", features = ["writer", "strings"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "proguard_parsing"
harness = false

[[bench]]
name = "proguard_mapping"
harness = false
